add function to pre-calculate the conformers

--- a/rosvm/ranksvm/tutorial/build_ROSVM_model.ipynb
+++ b/rosvm/ranksvm/tutorial/build_ROSVM_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
     "from rosvm.ranksvm.rank_svm_cls import KernelRankSVC, Labels\n",
     "from rosvm.ranksvm.analysis_utils import RankSVMAnalyzer\n",
     "from rosvm.ranksvm.tutorial.utils import read_dataset\n",
-    "from rosvm.feature_extraction.featurizer_cls import CircularFPFeaturizer, Circular3DFPFeaturizer"
+    "from rosvm.feature_extraction.featurizer_cls import CircularFPFeaturizer, Circular3DFPFeaturizer, EStateIndFeaturizer"
    ]
   },
   {
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -251,6 +251,143 @@
     "            axrr[row, col].set_ylabel(\"Preference score\")\n",
     "        axrr[row, col].set_title(\"%s (cind=%.2f)\" % (ds, KernelRankSVC.score_pointwise_using_predictions(_y_split_ds, _y_pred_split_ds)[0]))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Explore Performance of Different Molecule Representations\n",
+    "\n",
+    "For that we exclude one dataset completly from the training. We build RankSVM models with the remaining data and evaluate their prediction performance. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipelines = {\n",
+    "    \"ECFP\": make_pipeline(\n",
+    "        CircularFPFeaturizer(fp_type=\"ECFP\", only_freq_subs=True, output_dense_matrix=True, radius=3, min_subs_freq=0.05),\n",
+    "        KernelRankSVC(kernel=\"minmax\", random_state=484, C=1)),\n",
+    "    \"FCFP\": make_pipeline(\n",
+    "        CircularFPFeaturizer(fp_type=\"FCFP\", only_freq_subs=True, output_dense_matrix=True, radius=3, min_subs_freq=0.05),\n",
+    "        KernelRankSVC(kernel=\"minmax\", random_state=484, C=1)),\n",
+    "    \"EStateIdc\": make_pipeline(\n",
+    "        EStateIndFeaturizer(),\n",
+    "        KernelRankSVC(kernel=\"generalized_tanimoto\", random_state=484, C=1)),\n",
+    "    \"E3FP\": make_pipeline(\n",
+    "        Circular3DFPFeaturizer(fp_type=\"E3FP\", only_freq_subs=True, output_dense_matrix=True, min_subs_freq=0.05, save_conformer=True,\n",
+    "                               conformer_seed=29191, n_jobs=4),\n",
+    "        KernelRankSVC(kernel=\"generalized_tanimoto\", random_state=484, C=1)),\n",
+    "    \"E3FP-NoStereo\": make_pipeline(\n",
+    "        Circular3DFPFeaturizer(fp_type=\"E3FP-NoStereo\", only_freq_subs=True, output_dense_matrix=True, min_subs_freq=0.05, save_conformer=True,\n",
+    "                               conformer_seed=29191, n_jobs=4),\n",
+    "        KernelRankSVC(kernel=\"generalized_tanimoto\", random_state=484, C=1))\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Precompute the conformers for the E3FP fingerprints"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipelines[\"E3FP\"][\"circular3dfpfeaturizer\"].precompute_conformers(mol, n_jobs=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Target dataset = Eawag_XBridgeC18 / Featurizer = ECFP\n",
+      "\tPairwise prediction accuracy: 0.71\n",
+      "Target dataset = Eawag_XBridgeC18 / Featurizer = FCFP\n",
+      "\tPairwise prediction accuracy: 0.73\n",
+      "Target dataset = Eawag_XBridgeC18 / Featurizer = EStateIdc\n",
+      "\tPairwise prediction accuracy: 0.74\n",
+      "Target dataset = Eawag_XBridgeC18 / Featurizer = E3FP\n",
+      "\tPairwise prediction accuracy: 0.71\n",
+      "Target dataset = Eawag_XBridgeC18 / Featurizer = E3FP-NoStereo\n",
+      "\tPairwise prediction accuracy: 0.71\n",
+      "Target dataset = FEM_long / Featurizer = ECFP\n",
+      "\tPairwise prediction accuracy: 0.86\n",
+      "Target dataset = FEM_long / Featurizer = FCFP\n",
+      "\tPairwise prediction accuracy: 0.86\n",
+      "Target dataset = FEM_long / Featurizer = EStateIdc\n",
+      "\tPairwise prediction accuracy: 0.87\n",
+      "Target dataset = FEM_long / Featurizer = E3FP\n",
+      "\tPairwise prediction accuracy: 0.87\n",
+      "Target dataset = FEM_long / Featurizer = E3FP-NoStereo\n",
+      "\tPairwise prediction accuracy: 0.86\n",
+      "Target dataset = LIFE_old / Featurizer = ECFP\n",
+      "\tPairwise prediction accuracy: 0.87\n",
+      "Target dataset = LIFE_old / Featurizer = FCFP\n",
+      "\tPairwise prediction accuracy: 0.85\n",
+      "Target dataset = LIFE_old / Featurizer = EStateIdc\n",
+      "\tPairwise prediction accuracy: 0.86\n",
+      "Target dataset = LIFE_old / Featurizer = E3FP\n",
+      "\tPairwise prediction accuracy: 0.87\n",
+      "Target dataset = LIFE_old / Featurizer = E3FP-NoStereo\n",
+      "\tPairwise prediction accuracy: 0.87\n",
+      "Target dataset = RIKEN / Featurizer = ECFP\n",
+      "\tPairwise prediction accuracy: 0.84\n",
+      "Target dataset = RIKEN / Featurizer = FCFP\n",
+      "\tPairwise prediction accuracy: 0.82\n",
+      "Target dataset = RIKEN / Featurizer = EStateIdc\n",
+      "\tPairwise prediction accuracy: 0.85\n",
+      "Target dataset = RIKEN / Featurizer = E3FP\n",
+      "\tPairwise prediction accuracy: 0.84\n",
+      "Target dataset = RIKEN / Featurizer = E3FP-NoStereo\n",
+      "\tPairwise prediction accuracy: 0.85\n",
+      "Target dataset = UFZ_Phenomenex / Featurizer = ECFP\n",
+      "\tPairwise prediction accuracy: 0.81\n",
+      "Target dataset = UFZ_Phenomenex / Featurizer = FCFP\n",
+      "\tPairwise prediction accuracy: 0.79\n",
+      "Target dataset = UFZ_Phenomenex / Featurizer = EStateIdc\n",
+      "\tPairwise prediction accuracy: 0.80\n",
+      "Target dataset = UFZ_Phenomenex / Featurizer = E3FP\n",
+      "\tPairwise prediction accuracy: 0.81\n",
+      "Target dataset = UFZ_Phenomenex / Featurizer = E3FP-NoStereo\n",
+      "\tPairwise prediction accuracy: 0.81\n"
+     ]
+    }
+   ],
+   "source": [
+    "for col, ds in enumerate(y.get_unique_dss()):\n",
+    "    for row, (feat_name, pipe) in enumerate(pipelines.items()):\n",
+    "        # Separate training and test set\n",
+    "        test = y.get_idc_for_ds(ds)\n",
+    "        train = [_idc for _idc in range(len(y)) if _idc not in test]\n",
+    "        \n",
+    "        # Train \n",
+    "        #gscv = GridSearchCV(estimator=pipe, param_grid={\"kernelranksvc__C\": [1/16, 1/8, 1, 8, 16, 32, 64]}, cv=GroupKFold(n_splits=5), n_jobs=4)\n",
+    "        ranksvm = pipe.fit(mol[train], y[train])\n",
+    "        \n",
+    "        print(\"Target dataset = %s / Featurizer = %s\" % (ds, feat_name))\n",
+    "        # print(\"\\tOptimal C: %f\" % ranksvm.best_params_[\"kernelranksvc__C\"])\n",
+    "        print(\"\\tPairwise prediction accuracy: %.2f\" % ranksvm.score(mol[test], y[test]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
